--- a/ecom.html
+++ b/ecom.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width ,initial-scale=1.0">
         <title>redstore | Ecommerce website design </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?
         family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="main.html"><img src="1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" ></a>
+                    <a href="main.html"><img src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" ></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
