--- a/product details.html
+++ b/product details.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width ,initial-scale=1.0">
         <title> Products details- Fashion Factory </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?
         family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img Src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
+                    <img Src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -27,27 +27,27 @@
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\cart.png" width="30px" height="30px">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\menu.png" class="menu-icon" oneclick="menutoggle()">
+                <img src="images/cart.png" width="30px" height="30px">
+                <img src="images/menu.png" class="menu-icon" oneclick="menutoggle()">
             </div>
         </div>
   <!----single product details------->
    <div class="small-container single-product">
        <div class="row">
            <div class="col-2">
-               <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\-473Wx593H-462555578-multi-MODEL.webp" width="100%" id="ProductImg">
+               <img src="images/-473Wx593H-462555578-multi-MODEL.webp" width="100%" id="ProductImg">
                <div class="small-img-row">
                    <div class="small-img-col">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\-473Wx593H-462555578-multi-MODEL.webp" width="100%" class="small-img">
+                       <img src="images/-473Wx593H-462555578-multi-MODEL.webp" width="100%" class="small-img">
                    </div>
                    <div class="small-img-col">
-                    <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\model 2.jpg" width="100%" class="small-img">
+                    <img src="images/model 2.jpg" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\model 3.jpg" width="100%" class="small-img">
+                    <img src="images/model 3.jpg" width="100%" class="small-img">
                 </div>
                 <div class="small-img-col">
-                    <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\model1.jpg"  width="100%" class="small-img">
+                    <img src="images/model1.jpg"  width="100%" class="small-img">
                 </div>
                </div>
            </div>
@@ -84,7 +84,7 @@
    <div class="small=container">
        <div class="row">
         <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product+3.webp">
+            <img src="images/product+3.webp">
             <h4>Mast & Harbour Women Beige Solid Mid-Top Wedges</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -96,7 +96,7 @@
             <p>&#8377 919.00</p>
         </div>
            <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product 2.webp">
+            <img src="images/product 2.webp">
             <h4>Puma Mens Ankle Length Sneakers</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -108,7 +108,7 @@
             <p>&#8377 1050.00</p>
         </div> 
         <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product+1.webp">
+            <img src="images/product+1.webp">
             <h4>Mens Geometry Color Block Reserve Collar Casual Shirt</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -122,7 +122,7 @@
 
    
     <div class="col-4">
-        <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest5.webp">
+        <img src="images/latest5.webp">
         <h4>BOAT Watch Delta-Premium Smartwatches </h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -148,12 +148,12 @@
                    <h3> Download Our App</h3>
                    <p>Download App For Android And ios Mobile Phone. </p>
                    <div class="app-logo>]">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\play-store.png">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\app-store.png">
+                       <img src="images/play-store.png">
+                       <img src="images/app-store.png">
                    </div>
                </div>
                <div class="footer-col-2">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
+                <img src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
                 <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits
                     Of Fashion To The Many.</p>
             </div>
