--- a/ACCOUNT.html
+++ b/ACCOUNT.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width ,initial-scale=1.0">
         <title>Account- Fashion Factory</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?
         family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img Src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
+                    <img Src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -27,8 +27,8 @@
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\cart.png" width="30px" height="30px">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\menu.png" class="menu-icon" 
+                <img src="images/cart.png" width="30px" height="30px">
+                <img src="images/menu.png" class="menu-icon" 
                 oneclick="menutoggle()">
             </div>
         </div>
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\Show-During-Fashion-Week.jpg" width="100%">
+                <img src="images/Show-During-Fashion-Week.jpg" width="100%">
 
             </div>
             <div class="col-2">
@@ -77,12 +77,12 @@
                    <h3> Download Our App</h3>
                    <p>Download App For Android And ios Mobile Phone. </p>
                    <div class="app-logo>]">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\play-store.png">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\app-store.png">
+                       <img src="images/play-store.png">
+                       <img src="images/app-store.png">
                    </div>
                </div>
                <div class="footer-col-2">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
+                <img src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
                 <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits
                     Of Fashion To The Many.</p>
             </div>
