--- a/about us.html
+++ b/about us.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width ,initial-scale=1.0">
         <title>About us-Fashion Factory</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?
         family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img Src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
+                    <img Src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -26,8 +26,8 @@
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\cart.png" width="30px" height="30px">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\menu.png" class="menu-icon" 
+                <img src="images/cart.png" width="30px" height="30px">
+                <img src="images/menu.png" class="menu-icon" 
                 oneclick="menutoggle()">
             </div>
         </div>
@@ -41,7 +41,7 @@
           <div class="row">
             <div class="column">
               <div class="card">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\14.jpg"alt="Jane" style="width:100%">
+                <img src="images/14.jpg"alt="Jane" style="width:100%">
                 <div class="container">
                   <h2> Mike Lecrec</h2>
                   <p class="title">CEO & Founder</p>
@@ -54,7 +54,7 @@
           
             <div class="column">
               <div class="card">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\20.jpg" alt="Mike" style="width:100%">
+                <img src="images/20.jpg" alt="Mike" style="width:100%">
                 <div class="container">
                   <h2>Jimmie carter</h2>
                   <p class="title">Art Director</p>
@@ -67,7 +67,7 @@
           
             <div class="column">
               <div class="card">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\21.jpg" alt="John" style="width:100%">
+                <img src="images/21.jpg" alt="John" style="width:100%">
                 <div class="container">
                   <h2>Rachael Green </h2>
                   <p class="title">Designer</p>
@@ -86,12 +86,12 @@
                 <h3> Download Our App</h3>
                 <p>Download App For Android And ios Mobile Phone. </p>
                 <div class="app-logo>]">
-                    <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\play-store.png">
-                    <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\app-store.png">
+                    <img src="images/play-store.png">
+                    <img src="images/app-store.png">
                 </div>
             </div>
             <div class="footer-col-2">
-             <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
+             <img src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
              <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits
                  Of Fashion To The Many.</p>
          </div>
