--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width ,initial-scale=1.0">
         <title>All Products- Fashion Factory</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://fonts.googleapis.com/css2?
         family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <img Src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
+                    <img Src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png" >
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -27,8 +27,8 @@
                         <li><a href="">Account</a></li>
                     </ul>
                 </nav>
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\cart.png" width="30px" height="30px">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\menu.png" class="menu-icon" oneclick="menutoggle()">
+                <img src="images/cart.png" width="30px" height="30px">
+                <img src="images/menu.png" class="menu-icon" oneclick="menutoggle()">
             </div>
        
 
@@ -52,7 +52,7 @@
 
        <div class="row">
            <div class="col-4">
-               <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product+1.webp">
+               <img src="images/product+1.webp">
                <h4>Mens Geometry Color Block Reserve Collar Casual Shirt</h4>
                <div class="rating">
                    <i class="fa fa-star"></i>
@@ -64,7 +64,7 @@
                <p>&#8377 500.00</p>
            </div>
            <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product 2.webp">
+            <img src="images/product 2.webp">
             <h4>Puma Mens Ankle Length Sneakers</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -76,7 +76,7 @@
             <p>&#8377 1050.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product+3.webp">
+            <img src="images/product+3.webp">
             <h4>Mast & Harbour Women Beige Solid Mid-Top Wedges</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -88,7 +88,7 @@
             <p>&#8377 919.00</p>
         </div>
         <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\product+4.webp">
+            <img src="images/product+4.webp">
             <h4>Wedani Floral Print Fit &Flare Dress For Women </h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -100,7 +100,7 @@
             <p>&#8377 849.00</p>
             </div>
         <div class="col-4">
-            <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest 1.webp">
+            <img src="images/latest 1.webp">
             <h4>Marc Lorie womens footwear</h4>
             <div class="rating">
                 <i class="fa fa-star"></i>
@@ -112,7 +112,7 @@
             <p>&#8377 450.00</p>
         </div>
         <div class="col-4">
-         <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest+2.webp">
+         <img src="images/latest+2.webp">
          <h4>Nike Mens Sneakers</h4>
          <div class="rating">
              <i class="fa fa-star"></i>
@@ -124,7 +124,7 @@
          <p>&#8377 1050.00</p>
      </div>
      <div class="col-4">
-         <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest+3.webp">
+         <img src="images/latest+3.webp">
          <h4>Mast & Harbour Women Beige Solid Mid-Top Wedges</h4>
          <div class="rating">
              <i class="fa fa-star"></i>
@@ -136,7 +136,7 @@
          <p>&#8377 919.00</p>
      </div>
      <div class="col-4">
-         <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest+4.jpg">
+         <img src="images/latest+4.jpg">
          <h4>Wedani Floral Print Fit &Flare Dress For Women </h4>
          <div class="rating">
              <i class="fa fa-star"></i>
@@ -148,7 +148,7 @@
          <p>&#8377 849.00</p>
      </div>
      <div class="col-4">
-        <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest+9.webp">
+        <img src="images/latest+9.webp">
         <h4>Apparel-children-3-6 month</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -160,7 +160,7 @@
         <p>&#8377 299.00</p>
     </div>
     <div class="col-4">
-        <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest8.webp">
+        <img src="images/latest8.webp">
         <h4>Men's Poly Cotton Ankle Length Socks(Multicolour) </h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -172,7 +172,7 @@
         <p>&#8377 349.00</p>
     </div>
     <div class="col-4">
-        <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest6.webp">
+        <img src="images/latest6.webp">
         <h4>White Colour Full Sleeve HILFIGER Brand jacket</h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -184,7 +184,7 @@
         <p>&#8377 1199.00</p>
     </div>
     <div class="col-4">
-        <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\latest5.webp">
+        <img src="images/latest5.webp">
         <h4>BOAT Watch Delta-Premium Smartwatches </h4>
         <div class="rating">
             <i class="fa fa-star"></i>
@@ -216,12 +216,12 @@
                    <h3> Download Our App</h3>
                    <p>Download App For Android And ios Mobile Phone. </p>
                    <div class="app-logo>]">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\play-store.png">
-                       <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\app-store.png">
+                       <img src="images/play-store.png">
+                       <img src="images/app-store.png">
                    </div>
                </div>
                <div class="footer-col-2">
-                <img src="C:\Users\Akhilesh\OneDrive\Desktop\fashion\1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
+                <img src="images/1j+ojlxEOMkX9Wyqfhe43D6khv6HrxVInBzNwWJqZ0Y4lncV71428IMYkYJZQwtc41wdxkpWM4NohSV9VIEXhRxt9zo=.png">
                 <p>Our Purpose Is To Sustainably Make The Pleasure And Benefits
                     Of Fashion To The Many.</p>
             </div>
